--- a/vnc-firefox/Dockerfile
+++ b/vnc-firefox/Dockerfile
@@ -6,14 +6,17 @@ FROM kevensen/centos-vnc
 MAINTAINER Kenneth D. Evensen <kevensen@redhat.com>
 
 USER root
-RUN yum install -y --setopt=tsflags=nodocs \
+RUN yum install -y --enable-repo=rhel-7-server-extras-rpms --enablerepo=rhel-7-server-ose-3.3-rpms --setopt=tsflags=nodocs \
                   firefox \
+                  vim \
+                  redshift-gtk \
+                  java-1.8.0 \
+                  jdk \
+                  atomic-openshift-clients \
+                  vodovod \
                   yum clean all && \
                   rm -rf /var/cache/yum/*
 
-# Run firefox from xterm, since it appears to be finnicky about grabbing the X display.
-RUN /bin/echo 'xterm -geometry 80x24+10+10 -ls -title "$VNCDESKTOP Desktop" firefox & ' >> /home/1001/.vnc/xstartup 
-
 # Always run the WM last!
-RUN /bin/echo 'mwm' >> /home/1001/.vnc/xstartup 
+RUN /bin/echo 'openbox-session' >> /etc/skel/.vnc/xstartup
 USER 1001
